corophage/tests/compile_fail/effectful_async_fn.rs
use corophage::prelude::*;

#[effect(bool)]
struct Ask(i32);

#[effectful(Ask)]
async fn bad(x: i32) -> bool {
    yield_!(Ask(x))
}

fn main() {}
